crates/ars-components/src/data_display/snapshots/ars_components__data_display__avatar__tests__avatar_fallback_icon_visible.snap
---
source: crates/ars-components/src/data_display/avatar.rs
expression: "snapshot_attrs(&fallback.connect(&|_| {}).fallback_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-fallback",
            ),
            String(
                "icon",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "fallback",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "avatar",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
