crates/ars-components/src/data_display/snapshots/ars_components__data_display__avatar__tests__avatar_fallback_initials_hidden.snap
---
source: crates/ars-components/src/data_display/avatar.rs
expression: "snapshot_attrs(&loading.connect(&|_| {}).fallback_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-fallback",
            ),
            String(
                "initials",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "fallback",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "avatar",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [
        (
            Display,
            "none",
        ),
    ],
}
